fix(jans-core): db document Store fixes #5619 (#5620)